; ModuleID = '/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpcaf_grammar_char.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/mpc/extr_mpc.c_mpcaf_grammar_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@MPCA_LANG_WHITESPACE_SENSITIVE = common dso_local global i32 0, align 4
@mpcf_str_ast = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"char\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*)* @mpcaf_grammar_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @mpcaf_grammar_char(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %9, %struct.TYPE_2__** %5, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i8* @mpcf_unescape(i32* %10)
  store i8* %11, i8** %6, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @MPCA_LANG_WHITESPACE_SENSITIVE, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %2
  %19 = load i8*, i8** %6, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 0
  %21 = load i8, i8* %20, align 1
  %22 = call i32* @mpc_char(i8 signext %21)
  br label %29

23:                                               ; preds = %2
  %24 = load i8*, i8** %6, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 0
  %26 = load i8, i8* %25, align 1
  %27 = call i32* @mpc_char(i8 signext %26)
  %28 = call i32* @mpc_tok(i32* %27)
  br label %29

29:                                               ; preds = %23, %18
  %30 = phi i32* [ %22, %18 ], [ %28, %23 ]
  store i32* %30, i32** %7, align 8
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 @free(i8* %31)
  %33 = load i32*, i32** %7, align 8
  %34 = load i32, i32* @mpcf_str_ast, align 4
  %35 = call i32 @mpc_apply(i32* %33, i32 %34)
  %36 = call i32 @mpca_tag(i32 %35, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %37 = call i32* @mpca_state(i32 %36)
  ret i32* %37
}

declare dso_local i8* @mpcf_unescape(i32*) #1

declare dso_local i32* @mpc_char(i8 signext) #1

declare dso_local i32* @mpc_tok(i32*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32* @mpca_state(i32) #1

declare dso_local i32 @mpca_tag(i32, i8*) #1

declare dso_local i32 @mpc_apply(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
